# MachineLearning

./: .gitignore  README.MD  pyproject.toml
lab1/: lab1.ipynb
lab2/: lab2.ipynb
lab3/: lab3.ipynb
lab4/: lab4.ipynb
lab5/: lab5.ipynb
lab6/: lab6.ipynb
