[tool.poetry]
name = "machinelearning"
version = "0.1.0"
description = ""
authors = ["Piotr Branewski <pbranewski@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.3.6"
tqdm = "^4.67.1"
rich = "^14.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
